@@ -2,6 +2,11 @@
 			   ==============
 
 
+* FIXED: frame->geomtry for transient frames (MS-Windows).  Jocelyn Paine.
+
+* FIXED: PceEmacs crash on `revert-buffer'.  Pierpaolo Bernardi.
+
+
 VERSION 6.5.6, distributed with SWI-Prolog 5.5.6
 ================================================
 
